src/styles.css
/* You can add global styles to this file, and also import other style files */
@import url("https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.0/css/all.min.css");
@import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css");
@import "~bootstrap/dist/css/bootstrap.css";
/* WhatsApp floating button */
.float {
  position: fixed;
  width: 60px;
  height: 60px;
  bottom: 40px;
  right: 40px;
  background-color: #25d366; /* WhatsApp green */
  color: #FFF;
  border-radius: 50px;
  text-align: center;
  font-size: 30px;
  box-shadow: 2px 2px 3px #999;
  z-index: 999;
}
.my-float {
  margin-top: 16px;
}

